[package]
name = "tex_tool"
version = "0.0.1"
authors = ["zhylmzr <zhylmzr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.14"
image = "0.23.14"
squish = "1.0.0"
tokio = { version = "1.5.0", features = ["full"] }
clap = "2.33.3"